--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/NandKumarGangai/my-image-gallary",
+  "homepage": "https://NandKumarGangai.github.io/my-image-gallary",
   "name": "image-gallary",
   "version": "0.1.0",
   "private": false,
